--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
     <meta name="ServiceConnect" content="unemployment, be your own boss, convenience, services, jobs, unsatisfied wages and salaries">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" height="100%" width="100%">
-    <body background="_ (9).jpg">
+    <body background="background4SC.jpg">
         <table width="100%" cellspacing="0" cellpadding="6" border="0" margin="0" padding="0">
             <tr height="60px" align="center" bgcolor=>
                 <td colspan="4"><h1><font color="teal" font-family="helvetica" size="7">S</font>ervice<font color="teal" font-family="helvetica" size="7">C</font>onnect</h1></td>
