--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
      </head>
-    <body background="_ (9).jpg" height="100%" width="100%">
+    <body background="background4SC.jpg" height="100%" width="100%">
         <table height="100%" width="100%" cellspacing="0" cellpadding="6" border="0" margin="0" padding="0" >
             <tr height="60" align="center" >
                 <td colspan="4" ><h1 align="center"><strong><font size="7" font-family="goergia" color="teal">S</font>ervice<font size="7" font-family="goergia" color="teal">C</font>onnect</strong></h1></td>
@@ -21,7 +21,7 @@
         <table height="100%" width="100%" cellspacing="0" cellpadding="6" border="0" >
             <tr height="100%" border="0">
         
-                <td height="100%" width="40%" background="_ (9).jpg">
+                <td height="100%" width="40%" background="background4SC.jpg">
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/WebDevelopers.html" title="Find web developers here!"><button>Web Developer</button></a></div><br/>
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/DataScientist.html" ><button>Data Scientist</button></a> </div><br/>
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/DataAnalysts.html" title="Find data analysts here!"><button>Data analyst</button></a></div><br/>
@@ -111,7 +111,7 @@
                  <div><a href="file:///Users/children/Desktop/html/ServiceConnect/ResumeWriters.html" title="Find Resume Writers here!"><button>Resume Writer</button></a></div><br/>
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/CloudComputingSpecialists.html" title="Find Cloud Computing Specialists here!"><button>Cloud Computing Specialist</button></a></div><br/>
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/Carpentery:Joinery.html" title="Find Carpenters/Joiners here!"><button>Carpenter/Joiner</button></a></div><br/>
-           <td height="100%" width="40%" background="_ (9).jpg">
+           <td height="100%" width="40%" background="background4SC.jpg">
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/HelpDeskSupport.html" title="Find Help Desk Supports here!"><button>Help Desk Support</button></a></div><br/>
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/IT-Consultants.html" title="Find IT Consultants here!"><button>IT Consultant</button></a></div><br/>
                 <div><a href="file:///Users/children/Desktop/html/ServiceConnect/DigitalForensicsSpecialists.html" title="Find Digital Forensics Specialists here!"><button>Digital Forensics Specialist</button></a></div><br/>
