--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
-    <body  background="_ (9).jpg" height="100%" width="100%">
+    <body  background="background4SC.jpg" height="100%" width="100%">
         <div><p><marquee><h1 align="center">Welcome To <font color="teal" font-family="helvetica" size="7">S</font>ervice<font color="teal" font-family="helvetica" size="7">C</font>onnect</h1></marquee></div><br/>
         <div><p><strong><font color="teal" font-family="helvetica" size="7">S</font>ervice<font color="teal" font-family="helvetica" size="7">C</font>onnect</strong> is a platform that
         puts a spotlight on Freelancers, making it easier for freelance to take its course.</p> <p>Our goal is to ensure that there's easy access to services, 
