--- a/intro.html
+++ b/intro.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>ServiceConnect'sIntro</title>
     </head>
-    <body background="_ (9).jpg">
+    <body background="background4SC.jpg">
         <div>
             <p class="images"><img src="innovate2.jpg"></p>
             <p id="text">Why stay unemployed and unsatisfied with your yearly income, when ServiceConnect can help you create possibilities?</p>
