--- a/contactUs.html
+++ b/contactUs.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
-    <body background="_ (9).jpg">
+    <body background="background4SC.jpg">
         <table height="100%" width="100%" cellspacing="0" cellpadding="6" border="0">
             <tr height="50" align="center" bgcolor="">
                 <td colspan="4" align="center"><h1><font color="teal" font-family="helvetica" size="7">S</font>ervice<font color="teal" font-family="helvetica" size="7">C</font>onnect</h1></td>
