--- a/intro.html
+++ b/intro.html
@@ -35,8 +35,8 @@
           <div>
             <p class="images"><img src="smile.jpg"></p>
             <p class="text">Welcome, to <font size="6" font-family="helvetica" color="teal">S</font>ervice<font size="6" font-family="helvetica" color="teal">C</font>onnect.<br/>Where you Seek. Connect. Serve. and Thrive!</p>
-        </div>
-        <div><font size="5" family="Karla"> &rightarrow; <a href="./who" target="_self"> Let's Explore</a> &leftarrow; the possibilities!</font></div>
+        </div><br/><br/>
+        <div><font size="5" family="Karla"> &rightarrow; <a href="./who.html" target="_self"> Let's Explore</a> &leftarrow; the possibilities!</font></div>
         <br/>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     </body>
