--- a/SCKnowYou.html
+++ b/SCKnowYou.html
@@ -249,7 +249,7 @@
                                 <option value="Elder Care Specialist">Elder Care Specialist</option>
                                 <option value="Meal Planner">Meal Planner</option>
                             </select></div>
-                          <br/><br/><br/><br/><br/>
+                         <!-- <br/><br/><br/><br/><br/>
                             <div><input type="file" value="MAX_FILE_SIZE" name="ProfileFile" id="ProfileFile"><br/><br/><em>your profile photo</em><br/><br/><br/>OPTIONAL<br/>
                             <input type="file" value="MAX_FILE_SIZE" name="WorkFile" id="WorkFile"/><br/><br/><em>flex your work(Image/pdf)</em><br/>
                              <input type="file" value="MAX_FILE_SIZE" name="WorkFile" id="WorkFile"/><br/><br/><em>flex your work(Image/pdf)</em><br/>
@@ -261,7 +261,7 @@
                              <div class="submit">
                               <button type="Submit" value="Submit" name="Submit">Submit</button><a href="./we'llgetbacktoyou">Continue</a>
                               </div>
-                              </div>
+                              </div>-->
                            </form> 
                         </td>
                     </tr>
@@ -332,6 +332,7 @@
     
     div.submit{
         padding-left: 30px;
+
     }
     
     </style>    
