--- a/SCKnowYou.html
+++ b/SCKnowYou.html
@@ -5,6 +5,7 @@
         <meta name="ServiceConnect" content="This page of the site will retrieve information about the user's Job Specification, along with his skills and qualifications">
         <meta name="ServiceConnect" content="country, job, freelance, freelancer, skill, qualification, job specialty, own boss, self employed, functionality, purpose, ">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
    <body background="background4SC.jpg">
     <table height="100%" width="100%" cellspacing="0" cellpadding="6" border="0" > 
